--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,6 +35,17 @@
     </div>
 </div>
 
+<div id="game-over-modal" class="modal-overlay" style="display: none;">
+    <div class="modal-content">
+        <h1 id="game-result-title">GAME OVER</h1>
+        <div class="modal-buttons">
+            <button class="btn-new" onclick="restartGame()">🔄 NEW GAME</button>
+            <button class="btn-exit" onclick="exitToMenu()">🚪 EXIT</button>
+        </div>
+    </div>
+</div>
+
 <script src="game.js"></script>
+
 </body>
 </html>
