feat: add cover

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,8 @@
     <h1>🚢 Battleship 💣</h1>
 
     <div id="login-panel">
-        <input type="text" id="username" placeholder="Your Captain Nickname">
+        <img src="portada.png" id="login-image" alt="Battleship Cover">
+        <br> <input type="text" id="username" placeholder="Your Captain Nickname">
         <button onclick="createGame()">¡New Game!</button>
     </div>
 
