--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,13 +7,16 @@
 </head>
 <body>
 
+<img id="full-screen-bg" src="portada.png" alt="Battleship Cover">
+
 <div class="container">
-    <h1>🚢 Battleship 💣</h1>
+    <h1 class="main-title">🚢 Battleship 💣</h1>
 
     <div id="login-panel">
-        <img src="portada.png" id="login-image" alt="Battleship Cover">
-        <br> <input type="text" id="username" placeholder="Your Captain Nickname">
-        <button onclick="createGame()">¡New Game!</button>
+        <h2 style="margin-top: 0; color: #ecf0f1;">Captain's Log</h2>
+        <input type="text" id="username" placeholder="Enter your Nickname">
+        <br>
+        <button onclick="createGame()">¡START BATTLE!</button>
     </div>
 
     <div id="game-panel" style="display:none;">
