feat: change image for video

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 
-<img id="full-screen-bg" src="portada.png" alt="Battleship Cover">
+<video id="full-screen-bg" autoplay muted loop>
+    <source src="portada_video.mp4" type="video/mp4">
+    Tu navegador no soporta el vídeo.
+</video>
 
 <div class="container">
     <h1 class="main-title">🚢 Battleship 💣</h1>
