feat: change BATTLESHIP colors

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
 </video>
 
 <div class="container">
-    <h1 class="main-title">🚢 Battleship 💣</h1>
+    <h1 class="main-title"> Battleship </h1>
 
     <div id="login-panel">
         <h2 style="margin-top: 0; color: #ecf0f1;">Captain's Log</h2>
