feat: clean Exit and New Game

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,8 +46,8 @@
     <div class="modal-content">
         <h1 id="game-result-title">GAME OVER</h1>
         <div class="modal-buttons">
-            <button class="btn-new" onclick="restartGame()">🔄 NEW GAME</button>
-            <button class="btn-exit" onclick="exitToMenu()">🚪 EXIT</button>
+            <button class="btn-new" onclick="restartGame()"> NEW GAME</button>
+            <button class="btn-exit" onclick="exitToMenu()"> EXIT</button>
         </div>
     </div>
 </div>
@@ -55,6 +55,8 @@
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <script src="game.js"></script>
+
+<div id="shot-message" class="shot-message"></div>
 
 </body>
 </html>
