feat: new error message to Start New Game

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,9 +16,11 @@
     <h1 id="game-title" class="main-title"> Battleship </h1>
 
     <div id="login-panel">
-        <h2 style="margin-top: 0; color: #ecf0f1;">Captain's Log</h2>
+        <h1>CAPTAIN'S LOG</h1>
         <input type="text" id="username" placeholder="Enter your Nickname">
-        <br>
+
+        <div id="login-error" class="error-msg"></div>
+
         <button onclick="createGame()">¡START BATTLE!</button>
     </div>
 
