--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,15 +47,19 @@
 <div id="game-over-modal" class="modal-overlay" style="display: none;">
     <div class="modal-content">
         <h1 id="game-result-title">GAME OVER</h1>
+
         <div class="modal-buttons">
-            <button class="btn-new" onclick="restartGame()"> NEW GAME</button>
-            <button class="btn-exit" onclick="exitToMenu()"> EXIT</button>
+            <audio id="winAudio">
+                <source src="/win.mp3" type="audio/mpeg">
+            </audio>
+
+            <button class="btn-new" onclick="stopWinMusic(); createGame()">NEW GAME</button>
+            <button class="btn-exit" onclick="stopWinMusic(); location.reload()">EXIT</button>
         </div>
     </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-
 <script src="game.js"></script>
 
 <div id="shot-message" class="shot-message"></div>
