feat: add music when Player Lose

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -53,6 +53,10 @@
                 <source src="/win.mp3" type="audio/mpeg">
             </audio>
 
+            <audio id="loseAudio" loop>
+                <source src="/lose.mp3" type="audio/mpeg">
+            </audio>
+
             <button class="btn-new" onclick="stopWinMusic(); createGame()">NEW GAME</button>
             <button class="btn-exit" onclick="stopWinMusic(); location.reload()">EXIT</button>
         </div>
