--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,6 +31,9 @@
         </div>
 
         <div class="boards-container">
+
+            <div id="cpu-alert-panel" class="side-panel"></div>
+
             <div class="board-section">
                 <h2>Your Fleet (Player)</h2>
                 <div id="player-board" class="board"></div>
@@ -40,6 +43,9 @@
                 <h2>Enemy Waters (CPU)</h2>
                 <div id="cpu-board" class="board enemy-board"></div>
             </div>
+
+            <div id="player-alert-panel" class="side-panel"></div>
+
         </div>
     </div>
 </div>
