feat: changed photo for video when PLAYER WIN

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -53,9 +53,7 @@
 <div id="game-over-modal" class="modal-overlay" style="display: none;">
     <div class="modal-content-image">
 
-        <img id="result-img" src="" alt="Game Result" style="display: none;">
-
-        <video id="result-video" muted loop playsinline style="display: none;"></video>
+        <video id="result-video" muted loop playsinline></video>
 
         <div class="buttons-overlay">
             <button class="btn-new" onclick="stopWinMusic(); createGame()">NEW GAME</button>
