feat: add info when ships sunken (squares)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,19 +46,27 @@
 
         <div class="boards-container">
 
-            <div id="cpu-alert-panel" class="side-panel"></div>
+            <div class="side-column left-column">
+                <div id="player-status-panel" class="status-panel"></div>
+
+                <div id="cpu-alert-panel" class="side-panel"></div>
+            </div>
 
             <div class="board-section">
-                <h2>Your Fleet (Player)</h2>
+                <h2>YOUR FLEET</h2>
                 <div id="player-board" class="board"></div>
             </div>
 
             <div class="board-section">
-                <h2>Enemy Waters (CPU)</h2>
+                <h2>ENEMY WATERS</h2>
                 <div id="cpu-board" class="board enemy-board"></div>
             </div>
 
-            <div id="player-alert-panel" class="side-panel"></div>
+            <div class="side-column right-column">
+                <div id="cpu-status-panel" class="status-panel"></div>
+
+                <div id="player-alert-panel" class="side-panel"></div>
+            </div>
 
         </div>
     </div>
