feat: changed color Hall Of Fame

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
 
         <button onclick="createGame()">¡START BATTLE!</button>
 
-        <button onclick="showRanking()" style="background-color: #f1c40f; color: #2c3e50; margin-top: 10px;">
+        <button onclick="showRanking()" style="background-color: #3498db; color: white; margin-top: 10px;">
             🏆 HALL OF FAME
         </button>
     </div>
