feat: Popeye´s video loop

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -75,7 +75,7 @@
 
         <button class="btn-new side-button" onclick="restartGame()">NEW GAME</button>
 
-        <video id="result-video" muted playsinline></video>
+        <video id="result-video" muted playsinline loop></video>
 
         <button class="btn-exit side-button" onclick="exitToMenu()">EXIT MENU</button>
 
