feat: Exit botton changed

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -77,14 +77,13 @@
 
         <video id="result-video" muted playsinline loop></video>
 
-        <button class="btn-exit side-button" onclick="exitToMenu()">EXIT MENU</button>
+        <img src="/images/exit_button.jpg"
+             class="img-btn-exit"
+             onclick="exitToMenu()"
+             alt="EXIT GAME">
 
-        <audio id="winAudio">
-            <source src="/sounds/win.mp3" type="audio/mpeg">
-        </audio>
-        <audio id="loseAudio" loop>
-            <source src="/sounds/lose.mp3" type="audio/mpeg">
-        </audio>
+        <audio id="winAudio"><source src="/sounds/win.mp3" type="audio/mpeg"></audio>
+        <audio id="loseAudio" loop><source src="/sounds/lose.mp3" type="audio/mpeg"></audio>
     </div>
 </div>
 
