--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -73,7 +73,10 @@
 <div id="game-over-modal" class="modal-overlay" style="display: none;">
     <div class="modal-content-image game-over-layout">
 
-        <button class="btn-new side-button" onclick="restartGame()">NEW GAME</button>
+        <img src="/images/new_game_button.jpg"
+             class="img-btn-new"
+             onclick="restartGame()"
+             alt="NEW GAME">
 
         <video id="result-video" muted playsinline loop></video>
 
