feat: add radar to boards

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -53,6 +53,13 @@
             <div class="side-column left-column">
                 <div id="player-status-panel" class="status-panel"></div>
                 <div id="cpu-alert-panel" class="side-panel"></div>
+
+                <div class="mini-radar-container">
+                    <div class="radar-scan-container mini-radar">
+                        <img src="/images/radar.png" alt="Radar Scan" class="radar-img">
+                        <div class="radar-scanner-line"></div>
+                    </div>
+                </div>
             </div>
 
             <div class="board-section">
@@ -68,10 +75,18 @@
             <div class="side-column right-column">
                 <div id="cpu-status-panel" class="status-panel"></div>
                 <div id="player-alert-panel" class="side-panel"></div>
+
+                <div class="mini-radar-container">
+                    <div class="radar-scan-container mini-radar">
+                        <img src="/images/radar.png" alt="Radar Scan" class="radar-img">
+                        <div class="radar-scanner-line"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <div id="game-over-modal" class="modal-overlay" style="display: none;">
     <div class="modal-content-image game-over-layout">
