--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -122,6 +122,10 @@
     Tu navegador no soporta audio.
 </audio>
 
+<audio id="sonarAudio">
+    <source src="sounds/sonar.wav" type="audio/wav">
+</audio>
+
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <script type="module" src="/js/main.js"></script>
